Update to latest upstream release

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "maven-bundle-plugin-2.0.0-project.tar.gz:"	07be1029431c9059305079df734a24cf37a81189
+  maven-bundle-plugin-2.3.7-source-release.tar.gz: 5ff9a8bbf12f6656c61b50aab6d499a4690c6654
