--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   maven-bundle-plugin-2.3.7-source-release.tar.gz: 5ff9a8bbf12f6656c61b50aab6d499a4690c6654
+  maven-bundle-plugin-2.5.4-source-release.tar.gz: 4390bdde1d9f4b5765b648e08e521f40f55538ef
